# vogueX---Fashion-Recommender

./: .gitignore  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  LICENSE.md  README.md  app.py  requirements.txt  requirements2.txt  setup.cfg  setup.py  tempCodeRunnerFile.py  timeline.js  validation.js  vogueX.db  weather.js  widget-blog.js  zappa_settings.json
.circleci/: config.yml
.github/workflows/: style_checker.yml  (+1 more)
docs/: CNAME  SE Project - USE CASES.md  Scalability Document.md  __init__.html  helper.html  pitch.md  proj1rubric.md  proj2rubric.md  recommendations.html  shopping.html  utils.html
hairstyle-try-on/: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  app.py  inference.py  requirements.txt  test.py
scripts/: schema.sql
src/: CustomMixin.py  __init__.py  contracts.py  dress.py  favourites.py  helper.py  models.py  preferences.py  recommendations.py  shopping.py  utils.py
static/: styles.css
templates/: about.html  base.html  contact.html  dashboard.html  dummy.html  fashionrecommender.html  favorites.html  forgot_password.html  home.html  index.html  login.html  recommendationresult.html  signup.html  template.html  try.html  tryon.html
test-reports/: test-results.xml
tests/: conftest.py  data.sql  database.db  test_auth.py  test_helpers.py  test_imageSearchapi.py  test_preferences.py  test_shopping.py
website/: CustomMixin.py  __init__.py  auth.py  contracts.py  database.db  dress.py  favourites.py  helper.py  models.py  preferences.py  recommendations.py  shopping.py  utils.py  views.py
(+50 files in other folders)
