[metadata]
name = flaskr
version = 2.2.2
url = https://github.com/arvindsrinivas1/vogueX---Fashion-Recommender
license = MIT
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = The basic blog app built in the Flask tutorial.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr

[flake8]
ignore = E501,F401,F811,F841,E266,E302,W291,W293,W503,E722,E402
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 10